crates/templates/tests/snapshots/parse_default_arguments_test__impl-10.snap
---
source: crates/templates/tests/parse_default_arguments_test.rs
expression: output
---
  while [[ $# -gt 0 ]]; do
    case "${1:-}" in
      *)
        break
        ;;
    esac
  done


