crates/templates/tests/snapshots/parse_default_arguments_test__impl.snap
---
source: crates/templates/tests/parse_default_arguments_test.rs
expression: output
---

while [[ $# -gt 0 ]]; do
    case "${1:-}" in
      -v | --version)
        version
        exit
        ;;
      -h | --help)
        usage
        exit
        ;;

      *)
        break
        ;;
    esac
  done
