crates/templates/tests/snapshots/parse_default_arguments_test__render.snap
---
source: crates/templates/tests/parse_default_arguments_test.rs
expression: output
---
while [[ $# -gt 0 ]]; do
    case "${1:-}" in
      
      -h | --help)
        usage
        exit
        ;;

      *)
        break
        ;;
    esac
  done

